tests/NormalTests/paczka1/fuzzy1/33309257.err
Error in line 2: BWTA2WlQXd S795 86,8
Error in line 15: CRsZnFi2wCg S924 48,4
Error in line 26: Ck3Nx A691 95,7
Error in line 31: CRsZnFi2wCg A566 49,6
